--- a/RiotTable.csproj
+++ b/RiotTable.csproj
@@ -60,9 +60,14 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="basic_ts.html" />
+    <Content Include="basic-ts.html" />
+    <Content Include="elements\paginator.html" />
     <Content Include="elements\rtable.html" />
+    <Content Include="paged-table.html" />
+    <Content Include="pager-ts.html" />
+    <Content Include="pager.html" />
     <Content Include="README.md" />
+    <Content Include="data\liste1.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -73,7 +78,8 @@
   <ItemGroup>
     <Content Include="basic.html" />
     <Content Include="index.html" />
-    <Content Include="test_ts.html" />
+    <Content Include="style.css" />
+    <Content Include="test-ts.html" />
     <Content Include="test.html" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -81,6 +87,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="elements\paginator.ts" />
     <TypeScriptCompile Include="elements\rtable.ts" />
     <TypeScriptCompile Include="typings\underscore.d.ts" />
   </ItemGroup>
