--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 ﻿{
     "version": "1.0.0",
-    "name": "RiotTable",
+    "name": "RiotTable-ts",
     "devDependencies": {
         "bower": "^1.3.12",
         "gulp": "^3.8.10",
         "gulp-bower": "^0.0.7",
-        "gulp-tsc": "^0.9.1",
-        "gulp-shell": "^0.2.5",
-        "gulp-open": "^1.0.0",
-        "run-sequence":"^0.3.6"
+        "gulp-develop-server": "^0.4.3"
     }
 }
