--- a/Web.config
+++ b/Web.config
@@ -9,8 +9,12 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
-	<staticContent>
-	  <mimeMap fileExtension=".json" mimeType="application/json" />
-	</staticContent>
+    <security>
+      <!-- No good for production -->
+      <requestFiltering allowDoubleEscaping="true" />
+    </security>
+	  <staticContent>
+	    <!--<mimeMap fileExtension=".json" mimeType="application/json" />-->
+	  </staticContent>
   </system.webServer>
 </configuration>
