--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,13 @@
   "homepage": "https://github.com/Kiho/Riot-Table",
   "description": "Riot Table - TypeScript",
   "main": "rtable.js",
-  "license": "MIT",   
+  "license": "MIT",
   "dependencies": {
     "es6-promise": "~3.0.2",
     "underscore": "~1.8.3",
     "riot-ts": "~0.0.0"
+  },
+  "resolutions": {
+    "riot": "~2.3.11"
   }
 }
