--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
-﻿{
-    "version": "1.0.0",
-    "name": "RiotTable-ts",
-    "devDependencies": {
-        "bower": "^1.3.12",
-        "gulp": "^3.8.10",
-        "gulp-bower": "^0.0.7",
-        "gulp-develop-server": "^0.4.3"
-    }
+{
+  "version": "1.0.0",
+  "name": "riot-table-ts",
+  "devDependencies": {
+    "bower": "^1.7.9",
+    "gulp": "^3.9.1",
+    "gulp-bower": "^0.0.13",
+    "gulp-develop-server": "^0.5.2",
+    "underscore": "^1.8.3"
+  }
 }
